# BitArray

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  bitarray.cpp  bitarray.hpp
tests/: CMakeLists.txt  bitarray_tests.cpp
